# ie-viz

./: .gitignore  README.md  pyproject.toml
demo/: ClinicalNote.ipynb  TechNews.html  TechNews.ipynb
src/ie_vis/: __init__.py  app.py  utilities.py
src/ie_vis/static/: script.js  style.css
src/ie_viz/: __init__.py  utilities.py
src/ie_viz/static/: color_code.json  script.js  style.css
src/ie_viz/static/js/: App.js  DisplayTextBoxManager.js  FilterManager.js  TableManager.js
