[tool.poetry]
name = "ie-viz"
version = "0.2.3"
description = "A simple visualization tool for NLP information extraction: Named entity recognition, Entity attribute extraction, and Relation extration."
authors = ["Enshuo (David) Hsu"]
license = "MIT"
readme = "README.md"

exclude = [
    "test/**"
]


[tool.poetry.dependencies]
python = "^3.11"
flask = ">=2.3"
flask-socketio = ">=5.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
